Revert "switch to Option"
This reverts commit 89f6716dc9441762f22fcff20a2749f1ba6d742c.
