# emily/openapi-gen/generated-specs/testing-emily-openapi-spec.json
@@ -3010,7 +3010,8 @@
           "lastUpdateBlockHash",
           "status",
           "statusMessage",
-          "parameters"
+          "parameters",
+          "txid"
         ],
         "properties": {
           "amount": {
@@ -3073,8 +3074,7 @@
           },
           "txid": {
             "type": "string",
-            "description": "Txid of stacks tx initiated withdrawal",
-            "nullable": true
+            "description": "Txid of stacks tx initiated withdrawal"
           }
         }
       },
@@ -3090,7 +3090,8 @@
           "amount",
           "lastUpdateHeight",
           "lastUpdateBlockHash",
-          "status"
+          "status",
+          "txid"
         ],
         "properties": {
           "amount": {
@@ -3138,8 +3139,7 @@
           },
           "txid": {
             "type": "string",
-            "description": "Txid of stacks tx initiated withdrawal",
-            "nullable": true
+            "description": "Txid of stacks tx initiated withdrawal"
           }
         }
       },
